--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ p {
     color: #666;
     line-height: 1.6;
     margin: 10px 0;
+    text-align: right;
 }
 
 /* Styling for links */
@@ -36,6 +37,7 @@ a {
     font-size: 2em; /* Adjust the font size as needed */
     font-weight: bold; /* Optional: makes the text bold */
     animation: rainbow 3s infinite; /* Adjust the duration as needed */
+    text-align: left;
 }
 
 a:hover {
